Update main.yml: add pnpm version

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,9 @@ jobs:
         uses: dtolnay/rust-toolchain@stable
       - name: Setup pnpm
         uses: pnpm/action-setup@v2.2.4
+        with:
+          # Version of pnpm to install
+          version: 7.2.1
       - name: install frontend dependencies
         run: pnpm install # change this to npm or pnpm depending on which one you use
       - uses: tauri-apps/tauri-action@v0
