--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,3 +40,8 @@ jobs:
           releaseBody: 'See the assets to download this version and install.'
           releaseDraft: true
           prerelease: false
+      - name: Upload exe file
+        uses: actions/upload-artifact@v2
+        with:
+          name: exe-artifact
+          path: ./src-tauri/target/release/bundle.exe
