--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,9 +39,9 @@ jobs:
           releaseName: 'App v__VERSION__'
           releaseBody: 'See the assets to download this version and install.'
           releaseDraft: true
-          prerelease: false
+          prerelease: true
       - name: Upload exe file
         uses: actions/upload-artifact@v2
         with:
           name: exe-artifact
-          path: ./src-tauri/target/release/bundle/msi/atcc-workshop-uibuilder-tauri-pl_0.0.0_x64_zh-CN.msi
+          path: ./src-tauri/target/release/bundle/msi/atcc-workshop-uibuilder-tauri-pl___VERSION___x64_zh-CN.msi
